# src/swagger.yaml
@@ -131,6 +131,19 @@ paths:
           description: Champs requis manquants ou utilisateur existant
         '500':
           description: Erreur interne du serveur
+    get:
+      summary: Récupérer tous les utilisateurs
+      responses:
+        '200':
+          description: Liste des utilisateurs
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '500':
+          description: Erreur interne du serveur
 
   /users/login:
     post:
@@ -157,6 +170,79 @@ paths:
           description: Champs requis manquants ou mot de passe incorrect
         '404':
           description: Utilisateur non trouvé
+        '500':
+          description: Erreur interne du serveur
+
+  /users/{userId}:
+    get:
+      summary: Récupérer un utilisateur par ID
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Utilisateur trouvé
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: ID invalide
+        '404':
+          description: Utilisateur non trouvé
+        '500':
+          description: Erreur interne du serveur
+    patch:
+      summary: Mettre à jour un utilisateur par ID
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserInput'
+      responses:
+        '200':
+          description: Utilisateur mis à jour
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Champs requis manquants ou ID invalide
+        '401':
+          description: Non autorisé
+        '500':
+          description: Erreur interne du serveur
+    delete:
+      summary: Supprimer un utilisateur par ID
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Utilisateur supprimé
+        '400':
+          description: ID invalide
+        '401':
+          description: Non autorisé
         '500':
           description: Erreur interne du serveur
 
